# SNIPERCOR

./: .gitignore  AUGMENT_MEMORY_V1.md  AUGMENT_USER_GUIDELINES.md  CONTABO_OPTIMIZATION_SUMMARY.md  DOCUMENTATION-REFERENCES.md  PRODUCTION-DEPLOYMENT.md  README.md  REMOTE_AGENT_PROMPT.md  RULES.md  TECHNICAL_UPDATES_SUMMARY.md  deploy-to-production.sh  docker-compose.production.yml  docker-compose.yml  system.sh
monitoring/: prometheus.yml
scripts/: setup-rust-env.sh
sniper-core/: .env.example  Cargo.toml  Dockerfile
sniper-core/src/: config.rs  main.rs
sniper-core/src/config/: mod.rs
sniper-core/src/modules/: a2a_server.rs  cache_manager.rs  data_ingestor.rs  executor.rs  mod.rs  risk_manager.rs  strategy_engine.rs
strategy-host/: README.md
