[package]
name = "sniper-core"
version = "0.1.0"
edition = "2021"
authors = ["SolanaSniperV3 Team"]
description = "High-performance Solana transaction execution core"

# Optymalizacje dla Contabo VDS (6 CPU / 24GB RAM)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# HTTP Server Framework (Axum)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = [
    "full",
    "rt-multi-thread",  # Kluczowe dla wykorzystania 4 rdzeni
    "macros"
] }

# Serialization & JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana Integration - Real Transaction Support
solana-sdk = "2.0"
solana-client = "2.0"
spl-token = "6.0"  # SPL Token operations
spl-associated-token-account = "4.0"  # Associated Token Account operations
bs58 = "0.5"       # Base58 encoding/decoding

# WebSocket & HTTP Client for Market Data
tokio-tungstenite = "0.24"  # WebSocket client for Helius
futures-util = "0.3"  # For WebSocket stream handling
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database & Cache Integration
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }  # DragonflyDB client
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# A2A Protocol (Future-proofing)
# a2a-rs = "0.1"  # TODO: Implement when available

# Performance & Concurrency
dashmap = "6.1"  # Lock-free HashMap
crossbeam = "0.8"  # Lock-free channels
parking_lot = "0.12"  # Fast mutexes

# Monitoring & Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }  # Added serde feature
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"  # For trait objects in async contexts

# HTTP server middleware
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (Structured JSON dla produkcji)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "registry"
] }

[features]
default = []

# Konfiguracja dla różnych środowisk
[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

# Contabo VDS specific optimizations
[profile.contabo]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "sniper-core"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
